--- a/index.html
+++ b/index.html
@@ -41,9 +41,45 @@
             </div>
         </div>
         <div class="flexbox_containers_2">
-            <div class="flexbox_container-2-1">
-                
-
+            <div class="flexbox_container_2">
+                <div class="card card__1">
+                    <div class="circle circle__1--1"></div>
+                    <div class="circle circle__1--2"></div>
+                    <div class="circle circle__1--3"></div>
+                    <div class="circle circle__1--4"></div>
+                    <div class="circle circle__1--5"></div>
+                </div>
+                <div class="card card__2">
+                    <div class="circle circle__2--1"></div>
+                    <div class="circle circle__2--2"></div>
+                    <div class="circle circle__2--3"></div>
+                    <div class="circle circle__2--4"></div>
+                    <div class="circle circle__2--5"></div>
+                </div>
+                <div class="card card__3">
+                    <div class="circle circle__3--1"></div>
+                    <div class="circle circle__3--2"></div>
+                    <div class="circle circle__3--3"></div>
+                    <div class="circle circle__3--4"></div>
+                    <div class="circle circle__3--5"></div>
+                    <div class="circle circle__3--6"></div>
+                </div>
+                <div class="card card__4">
+                    <div class="circle circle__4--1"></div>
+                    <div class="circle circle__4--2"></div>
+                    <div class="circle circle__4--3"></div>
+                    <div class="circle circle__4--4"></div>
+                    <div class="circle circle__4--5"></div>
+                    <div class="circle circle__4--6"></div>
+                </div>
+                <div class="card card__5">
+                    <div class="circle circle__5--1"></div>
+                    <div class="circle circle__5--2"></div>
+                    <div class="circle circle__5--3"></div>
+                    <div class="circle circle__5--4"></div>
+                    <div class="circle circle__5--5"></div>
+                    <div class="circle circle__5--6"></div>
+                </div>
             </div>
         </div>
     </main>
